--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brotherhood Informática</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/responsive.css">
+    <!--<link rel="stylesheet" href="./styles/responsive.css">-->
 </head>
 <body>
     <header>
@@ -13,10 +13,12 @@
             <img id="logo" src="./images/brotherhood-escrita-logo.jpeg" alt="logo">
         </div>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="#">Contato</a>
-            <a href="#">Mais Vendidos</a>
-            <a href="#">Nossos Clientes</a>
+            <ul>
+                <a href="index.html"><li>Inicio</li></a>
+                <a href="#"><li>Contato</li></a>
+                <a href="#"><li>Mais Vendidos</li></a>
+                <a href="#"><li>Nossos Clientes</li></a>
+            </ul>
         </nav>
     </header>
     <main>
