--- a/pages/index.html
+++ b/pages/index.html
@@ -4,41 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brotherhood Informática</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
     <!--<link rel="stylesheet" href="./styles/responsive.css">-->
 </head>
 <body>
     <header>
         <div id="title">
-            <img id="logo" src="./images/brotherhood-escrita-logo.jpeg" alt="logo">
+            <img id="logo" src="../images/brotherhood-escrita-logo.jpeg" alt="logo">
         </div>
         <nav>
             <ul>
                 <a href="index.html"><li>Inicio</li></a>
-                <a href="#"><li>Contato</li></a>
-                <a href="#"><li>Mais Vendidos</li></a>
-                <a href="#"><li>Nossos Clientes</li></a>
+                <a href="./contato.html"><li>Contato</li></a>
+                <a href="./mais-vendidos.html"><li>Mais Vendidos</li></a>
+                <a href="/pages/nossos-clientes.html"><li>Nossos Clientes</li></a>
             </ul>
         </nav>
     </header>
     <main>
         <aside>
             <h1>Conectando você</h1>
-            <h1><span id="futuro">ao futuro da tecnologia</span>!</h1>
+            <h1 ><span id="futuro">ao futuro da tecnologia</span>!</h1>
             <p>Somos uma empresa especializada em revenda de equipamentos e suprimentos de informática e tecnologia. Estamos preparados para atender clientes de pequeno, médio e grande porte, oferecendo sempre soluções inteligentes e econômicas para quem precisa inovar ou suprir suas necessidades.
             </p>
             <h2>Entre em contato e envie sua cotação <span>AGORA</span>!</h2>
             <form>
                 <input type="text" placeholder="Nome">
                 <input type="email" placeholder="E-mail">
-                <!--<input type="tel" placeholder="Telefone Ex: 21 99999-9999">-->
-                <input id="text" type="text" placeholder="Envie sua cotação">
+                <input type="hidden" placeholder="Telefone Ex: 21 99999-9999">
+                <input id="text" type="hidden" placeholder="Envie sua cotação">
+                <textarea name="text" id="" placeholder="Envie sua cotação" rows="6"></textarea>
                 <input type="submit" value="Enviar">
                 
             </form>
         </aside>
         <article>
-            <img id="banner" src="./images/WhatsApp Image 2025-01-24 at 14.45.39.jpeg" alt="">
+            <img id="banner" src="../images/WhatsApp Image 2025-01-24 at 14.45.39.jpeg" alt="">
         </article>
     </main>
 </body>
